# bible_plan

./: .gitignore  bible_api.py  bible_plan.db  bot.py  config.py  const.py  models.py  pyproject.toml  users.py
